@@ -2,6 +2,7 @@
 v3.0.15
 -------
 
+[mms] Fix descending sorting of result lists.
 [mms] Return to same page when deleting contact from browse view.
 [mjr] Add ability to return count of objects matching search in place of full
       result set.
